--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
               env:
                   MEND_EMAIL: ${{secrets.MEND_EMAIL}}
                   MEND_USER_KEY: ${{secrets.MEND_USER_KEY}}
-                  MEND_URL: https://saas.mend.io
+                  MEND_URL: https://saas-eu.mend.io
               run: |
                   echo Downloading Mend CLI
                   curl -LJO https://downloads.mend.io/production/unified/latest/linux_amd64/mend && chmod +x mend
@@ -70,7 +70,7 @@ jobs:
               env:
                   MEND_EMAIL: ${{secrets.MEND_EMAIL}}
                   MEND_USER_KEY: ${{secrets.MEND_USER_KEY}}
-                  MEND_URL: https://saas.mend.io
+                  MEND_URL: https://saas-eu.mend.io
               run: |
                   echo Downloading Mend CLI
                   curl -LJO https://downloads.mend.io/production/unified/latest/linux_amd64/mend && chmod +x mend
